# vgi-trading-calendar

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-entrypoint.sh  pyproject.toml  trading_calendar_worker.py
.github/workflows/: ci.yml  docker-publish.yml
ci/: README.md  run-integration.sh
test/sql/: trading.test
tests/: harness.py  test_client.py  test_core.py  test_scalars.py  test_trading.py
vgi_trading_calendar/: __init__.py  core.py  meta.py  scalars.py  schema_utils.py  tables.py  trading.py  trading_scalars.py  trading_tables.py
